# produhacks

./: .env.example  .gitignore  LICENSE  PRD-one-shot-optimized.md  PRD.md  PRD_TEMPLATE.md  README.md  data_overview.md  full_architecture.md  messages.py  news_agent.py  pyproject.toml  repo_tester.py  test_client_agent.py
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md
.planning/phases/01-foundation/: 01-01-PLAN.md  01-01-SUMMARY.md  01-02-PLAN.md  01-02-SUMMARY.md  01-03-PLAN.md  01-03-SUMMARY.md  01-CONTEXT.md  01-RESEARCH.md  (+2 more)
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
agents/: .env.example  alternatives_agent.py  bureau.py  main.py  modeling_agent.py  modeling_charts.py  modeling_data.py  news_agent.py  orchestrator.py  portfolio_agent.py  ports.py  pyproject.toml
agents/bridge/: app.py  events.py  modeling_payload.py
agents/chart_examples/: README.txt  generate.py
agents/data/: portfolio.py
agents/mocks/: __init__.py  alternatives.py  modeling.py  news.py  portfolio.py
agents/models/: __init__.py  alternatives.py  events.py  modeling.py  news.py  portfolio.py  report.py  requests.py  responses.py
agents/scripts/: generate_mock_chart.py
agents/tests/: __init__.py  conftest.py  test_alternatives.py  test_bridge.py  test_bridge_smoke.py  test_bureau.py  test_mock.py  test_models.py  test_news.py  test_orchestrator.py  test_portfolio.py
agents/tests/visualization/: __init__.py  conftest.py  helpers.py  test_ci_headless.py  test_contract_registry.py  test_e2e_message_contract.py  test_integration_events.py  test_integration_modeling_handler.py  test_integration_response.py  test_integration_runmodel_json.py  test_stress_parallel.py  test_unit_base.py  test_unit_charts.py  test_unit_metrics.py  test_unit_registry.py
frontend/: build_error.txt  index.html  lint_error.txt  package-lock.json  package.json  vitest.config.ts
frontend/src/: App.tsx  index.css
(+53 files in other folders)
