[project]
name = "investiswarm"
version = "0.1.0"
requires-python = ">=3.11,<3.14"
dependencies = [
    "uagents==0.24.0",
    "fastapi>=0.115.0",
    "uvicorn>=0.30.0",
    "sse-starlette==3.3.3",
    "python-dotenv==1.*",
    "httpx==0.27.*",
    "google-genai>=1.0.0",
    "transformers>=4.40.0",
    "torch>=2.0.0",
    "pandas>=2.0.0",
    "numpy>=1.26.0",
    "yfinance>=0.2.38",
    "matplotlib>=3.9.0",
    "pytest",
    "pytest-asyncio",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["agents/tests"]
filterwarnings = [
    "ignore:There is no current event loop:DeprecationWarning",
]
