[project]
name = "investiswarm"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "uagents==0.24.0",
    "fastapi>=0.115.0",
    "uvicorn>=0.30.0",
    "sse-starlette==3.3.3",
    "python-dotenv==1.*",
    "httpx==0.27.*",
]

[project.optional-dependencies]
dev = ["pytest", "pytest-asyncio", "httpx"]

[tool.setuptools.packages.find]
where = [".."]
include = ["agents*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
