[project]
name = "investiswarm"
version = "0.1.0"
requires-python = ">=3.11,<3.14"
dependencies = [
    "uagents==0.24.0",
    "fastapi>=0.115.0",
    "uvicorn>=0.30.0",
    "sse-starlette==3.3.3",
    "python-dotenv==1.*",
    "httpx==0.27.*",
    "matplotlib>=3.9.0",
    "numpy>=1.26.0",
    "pandas>=2.0.0",
    "yfinance>=0.2.40",
    "openai>=1.0.0",
    "transformers>=4.40.0",
    "torch>=2.0.0",
]

[project.optional-dependencies]
dev = ["pytest", "pytest-asyncio", "httpx"]

[tool.setuptools.packages.find]
where = [".."]
include = ["agents*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["."]
filterwarnings = [
    "ignore:There is no current event loop:DeprecationWarning",
]
